# vocalis

./: .gitignore  Cargo.toml  LICENSE  README.md  VOCALIS.md  package-lock.json  sesion.md  sesion_dsp_fix.md
core/: Cargo.toml
core/src/: lib.rs  model.rs
data/: .gitignore
docs/: 01_introduccion.md  02_metodologia_dsp.md  03_arquitectura_tecnica.md  04_resultados.md  README.md
dsp_lab/: build_dsp_dataset.py  feature_extractor.py  spectral_analysis.py  train_classifier.py
dsp_lab/models/: gender_tree.pkl
models/: vocalis_model.onnx.data
research/data/: .gitignore  README.md
research/dsp_lab/: build_dsp_dataset.py  build_syllable_dataset.py  build_unified_dataset.py  debug_compare_rust.py  debug_mfcc_values.py  export_to_json.py  extract_syllables.py  feature_extractor.py  train_classifier.py  train_syllable_classifier.py  train_unified_classifier.py
research/dsp_lab/models/: svm_model_F.pkl  svm_model_M.pkl  vowel_tree.pkl
research/prototypes/core_v1/: Cargo.toml
research/prototypes/core_v1/src/: audio.rs  error.rs  lib.rs
research/train_lab/: best_vocalis_model.pth  dataset.py  model.py  process_dataset.py  requirements.txt  train.py
research/train_lab/dataset/: .gitignore  metadata.csv
train_lab/: best_vocalis_model.pth  export_onnx.py  process_dataset.py  requirements.txt  speakers.json
train_lab/dataset/: metadata.csv
vocalis/: design.txt  package-lock.json  package.json
vocalis/src/: index.css
vocalis/src/layouts/: Layout.astro
vocalis/src/pages/: index.astro  (+1 more)
vocalis_core/: Cargo.toml
vocalis_core/examples/: validate_model.rs
vocalis_core/src/: dsp.rs  inference.rs  lib.rs  model.rs
web_client/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.js
web_client/public/: vocalis.onnx
web_client/src/: lib.rs  main.js
(+6 files in other folders)
