[package]
name = "vocalis_core"
version = "0.1.0"
edition = "2021"
description = "High-performance DSP engine for Vocalis, compiled to WebAssembly."
authors = ["Eduardo Alonso"]
repository = "https://github.com/eddndev/vocalis"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Interoperabilidad con JavaScript/WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Matemáticas y DSP
rustfft = "6.1"
num-complex = "0.4"
ndarray = "0.15"  # Para manejo de matrices (útil para MFCC/SVM)

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"

# Utilidades
console_error_panic_hook = "0.1" # Mejores errores en la consola del navegador

[dev-dependencies]
hound = "3.5"