[package]
name = "web_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
vocalis_core = { path = "../core" }

[dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AnalyserNode",
    "MediaStream",
    "Navigator",
    "console"
]
